# wgpl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: wgpl-architecture.mdc  wgpl-git-agent.mdc
.cursor/skills/wgpl-dev/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
demo/: Makefile  README.md
demo/scripts/: mock_remote_sync.sh  prompt.sh
demo/tapes/: 01_quickstart.tape  02_split_tunnel.tape  03_branch_offices.tape  04_mixed_topology.tape  05_remote_sync.tape
docs/: ROUTING.md  cli.md  routing.md  routing_matrix.md  runbook.md
docs/rfcs/: 0001-projection-engine-implementation.md  0001-projection-engine.md
examples/: ansible-deployment.yml  fastapi-self-service.py  github-actions-gitops.yml  terraform-external-data.tf
src/: .bandit
src/wgpl/: __main__.py  audit.py  cli.py  consistency.py  core.py  db.py  dbpath.py  exceptions.py  fields.py  integrity.py  ipam.py  refs.py  restore.py  routing.py  validators.py  wireformat.py  wireguard.py
src/wgpl/projection/: composition.py  contracts.py  engine.py  snapshots.py  wireguard.py
tests/: conftest.py  json_helpers.py  test_audit.py  test_cli.py  test_cli_crud.py  test_cli_crud_options.py  test_cli_json.py  test_cli_qa_matrix.py  test_cli_routing.py  test_concurrency.py  test_core.py  test_db_ops.py  test_dbpath.py  test_fastapi_example.py  test_integrity.py  test_node_qa.py  test_output_paths.py  test_projection_builders.py  test_projection_dependencies.py  test_projection_engine.py  test_projection_parity.py  test_projection_snapshots.py  test_projection_wireguard.py  test_restore_integrity.py  test_routing.py  test_security_remediation.py  test_sync.py  test_trust_boundaries.py  test_validate_topology.py  test_validations_and_expires.py  test_wireformat.py
tests/golden/projection/: client.conf  server.conf
