[project]
name = "wgpl"
version = "0.1.0"
description = "WireGuard Peer Lite (WGPL) - Minimalist, secure, and automated WireGuard peer manager."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=49.0.0",
    "qrcode>=8.2",
    "typer>=0.26.8",
]

[project.scripts]
wgpl = "wgpl.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "types-qrcode>=8.2.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/wgpl"]
