[project]
name = "wgpl"
version = "0.1.0"
description = "WireGuard Peer Lite (WGPL) - Minimalist, secure, and automated WireGuard peer manager."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "aleaz" }]
keywords = ["wireguard", "vpn", "cli", "peers", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=49.0.0",
    "qrcode>=8.2",
    "rich>=13.0",
    "typer>=0.26.8",
]

[project.urls]
Homepage = "https://github.com/aleaz/wgpl"
Repository = "https://github.com/aleaz/wgpl"
Issues = "https://github.com/aleaz/wgpl/issues"

[project.scripts]
wgpl = "wgpl.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "ruff>=0.14.0",
    "types-qrcode>=8.2.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/wgpl"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
packages = ["wgpl"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
