[project]
name = "wgpl"
version = "1.0.2"
description = "WGPL (WireGuard Peer Lite) — disconnected CLI for declarative hub-and-spoke IPv4 VPN intent (SQLite SSOT, BYOI)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Alejandro Azario", email = "alejandroazario@gmail.com" }]
keywords = ["wireguard", "vpn", "cli", "peers", "sqlite"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=49.0.0",
    "qrcode>=8.2",
    "rich>=13.0",
    "typer>=0.26.8",
]

[project.urls]
Homepage = "https://github.com/aleaz/wgpl"
Repository = "https://github.com/aleaz/wgpl"
Issues = "https://github.com/aleaz/wgpl/issues"

[project.scripts]
wgpl = "wgpl.cli:app"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "fastapi>=0.115.0",
    "mypy>=2.1.0",
    "pip-audit>=2.9.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.14.0",
    "types-qrcode>=8.2.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/wgpl"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
packages = ["wgpl"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wgpl --cov-report=term-missing --cov-fail-under=80"
